[package]
name = "docs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
html2md = "0.2.14"
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tqdm = "0.7.0"
